# swink

./: .gitignore  CMakeLists.txt  README.md  gdb.sh  qemu.sh
docs/paranoia/: concept.md
docs/watchpoints/: lifeguard.md  shadow.md  system_integrity_guard.md
kernel/: CMakeLists.txt  link.ld
kernel/core/: exception.S  exception.c  start.S  start.c
kernel/core/exception/: exception.S  exception.c  exception.h  exception_asm.h
kernel/core/start/: start.S  start.c  vm_bootstrap.S
kernel/core/vm/: vm.h  vm_asm.h  vm_page_allocator.c  vm_page_allocator.h
kernel/lib/: asm_utils.h  assert.h  ctype.h  debug.c  debug.h  list.c  list.h  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.h  string.c  string.h  types.h
kernel/machine/: platform_registers.h
kernel/machine/io/: gpio.h
kernel/machine/io/console/: console.c  console.h
kernel/machine/io/mini_uart/: mini_uart.c  mini_uart.h
kernel/machine/io/pmc/: pmc.c  pmc.h
kernel/machine/io/vc/: vc_functions.c  vc_functions.h  vc_mailbox.c  vc_mailbox.h
kernel/machine/pmap/: pmap.c  pmap.h  pmap_asm.h  pmap_buddy_allocator.c  pmap_buddy_allocator.h  pmap_init.c  pmap_init.h  pmap_internal.h  pmap_pfa.c  pmap_pfa.h
kernel/machine/routines/: routines.S  routines.h
kernel/machine/smp/: smp.h
kernel/machine/synchronization/: atomics.h  synchs.c  synchs.h
kernel/testing/: CMakeLists.txt  runner.c  runner.h
kernel/testing/tests/: test_pmap_pfa.c  test_utils.h  tests.h
planning/watchpoints/: lifeguard.md
testing/: test_host.py
